# School42-C

./: .gitconfig  .vimrc  CMakeLists.txt  README.md  asdasd.c
Fillit/: Makefile  analize.c  check.c  ft_arr_putstr.c  get_figure_from_string.c  inc.h  libft.h  main.c  perebor.c  temp.txt
Fillit_with_debugs/: main.c
PushSwap/: main.c
get_next_line/: Makefile  get_next_line.c  get_next_line.h  main.c
libft/: .ft_strsplit.c.swp  .ft_strsplit1.c.swp  ft_list_size.c  ft_strsplit.c  ft_strsplit1.c
my_exams/: add_prime_sum.c  alpha_mirror.c  brainfuck.c  brainfuck.h  count_alpha.c  do_op.c  do_op.h  epur_str.c  expand_str.c  first_word.c  fprime.c  ft_atoi.c  ft_atoi_base.c  ft_itoa.c  ft_itoa_base.c  ft_list.h  ft_list_foreach.c  ft_list_remove_if.c  ft_list_size.c  ft_putstr.c  ft_rrange.c  ft_strcmp.c  ft_strdup.c  ft_strrev.c  ft_strsplit.c  ft_swap.c  hidenp.c  inc.h  inter.c  max.c  paramsum.c  pgcd.c  print_bits.c  print_hex.c  rev_wstr.c  reverse_bits.c  rstr_capitalizer.c  sort_int_tub.c  str_capitalizer.c  str_max_len.c  (+5 more)
printf/: Makefile  analize.c  analize1.c  analize2.c  analize4.c  fill.c  ft_analize.c  ft_atoi.c  ft_fill.c  ft_itoa_base.c  ft_itoa_base_unsign.c  ft_itoa_mod.c  ft_printf.c  ft_printf.h  ft_putstr_m.c  get_w_s_z.c  helpfunc.c  helpfunc1.c  helpfunc2.c  helpfunc3.c  main.c  mainc.c  print_buff.c  print_with_flags.c  print_with_flags1.c  print_with_flags2.c  print_with_flags3.c
push_swap/: CMakeLists.txt  alghoritm.c.c  creat_list.c  create_delete_resize.c  find.c  ft_intarr_len.c  help_func.c  little.c  little_sort.c  main.c  norm_sort.c  (+10 more)
(+194 files in other folders)
